# ielts-buddy

./: .coverage  .gitignore  2026-03-06.html  CLAUDE.md  README.md  index.html  pyproject.toml  run-cc.sh
.github/workflows/: ci.yml  pages.yml
docs/: PLAN.md  PRD.md  TEST_REPORT.md
prompts/: brainstorm.md  implement.md  implement2.md  implement3.md  phase1.5a.md  phase1.5b.md  phase2.5a.md  phase2.5b.md  phase2a.md  phase2b.md  phase3.md  phase4a.md  phase4b.md  phase5.md  phase6.md  phase7.md  plan.md  test.md
scripts/: build_master_vocab.py
src/ielts_buddy/: __init__.py  cli.py
src/ielts_buddy/commands/: deploy.py  email.py  exam.py  feishu.py  grade.py  listen.py  plan.py  recommend.py  report.py  speak.py  stats.py  sync.py  vocab.py  write.py
src/ielts_buddy/core/: config.py  models.py
src/ielts_buddy/data/: listening_resources.json  speaking_topics.json  synonyms.json  vocab_band5.json  vocab_band6.json  vocab_band7.json  vocab_band8.json  (+4 more)
tests/: conftest.py  test_config.py  test_models.py
tests/test_commands/: test_cli.py  test_exam_feishu_cli.py  test_grade_deploy_cli.py  test_listen.py  test_report_cli.py  test_speak_cli.py  test_sync_email_cli.py  test_write_cli.py
tests/test_services/: test_deploy_service.py  test_email_service.py  test_exam_service.py  test_feishu_service.py  test_grading_service.py  test_listening_service.py  test_plan_service.py  test_recommend_service.py  test_report_service.py  test_review_service.py  test_speaking_service.py  test_stats_service.py  test_sync_service.py  test_vocab_service.py  test_writing_service.py
(+18 files in other folders)
