[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ielts-buddy"
version = "0.1.0"
description = "IELTS vocabulary learning CLI tool with spaced repetition"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "IELTS Buddy Team"}]
keywords = ["ielts", "vocabulary", "cli", "spaced-repetition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ib = "ielts_buddy.cli:cli"
ielts = "ielts_buddy.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ielts_buddy = ["data/*.json", "templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]

[tool.ruff]
line-length = 100
target-version = "py310"
